# ICDTP_Gear_Sorting_Robot

./: README.md  gear_side_view.py  gear_top_view.py  gear_utils.py  index.html  inspection_node.py  main.py  side_view_pipeline.py  top_view_pipeline.py
STM32F4/: .cproject  .mxproject  .project  CMakeLists.txt  F446RE2 Debug.launch  README.md  STM32F4 Debug.launch  STM32F4.ioc
WebGlTest/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.Player.csproj  Assembly-CSharp.csproj  Extensions.Unity.PlayerPrefsEx.Editor.Tests.csproj  Extensions.Unity.PlayerPrefsEx.Player.csproj  Extensions.Unity.PlayerPrefsEx.csproj  Microsoft.CodeAnalysis.Analyzers_Unity.csproj  Unity.CollabProxy.Editor.csproj  Unity.EditorCoroutines.Editor.csproj  Unity.InputSystem.DocCodeSamples.csproj  Unity.InputSystem.ForUI.Player.csproj  Unity.InputSystem.ForUI.csproj  Unity.InputSystem.Player.csproj  Unity.InputSystem.TestFramework.Player.csproj  Unity.InputSystem.csproj  (+53 more)
ros2_ws/install/robot_middleware/share/robot_middleware/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/robot_middleware/share/robot_middleware/launch/: robot_middleware_launch.py
ros2_ws/src/roboterarm_config/: CMakeLists.txt
ros2_ws/src/roboterarm_config/config/: ros2_controllers.yaml  stm32_calibration.yaml  trajectory_execution.yaml
ros2_ws/src/roboterarm_config/launch/: demo.launch.py  move_group.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  unity_simulation.launch.py
ros2_ws/src/roboterarm_config/scripts/: stm32_serial_node.py  unity_moveit_bridge.py
(+185 files in other folders)
